<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <POU Name="P_Diagnosis" Id="{395414b2-5624-4395-bc73-a84b809d7d48}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Diagnosis
VAR
	i								:UINT;
	
	eTerminal						:E_Terminal;
	
	//診断用FB
	fbDiagnosisEtherCAT				:FB_DiagnosisEtherCAT;
	fbDiagnosisTerminal				:ARRAY[E_Terminal.EK1100..E_Terminal.AZD4A_KED] OF FB_DiagnosisTerminal;

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[//EtherCATマスター診断
	IF fbDiagnosisEtherCAT.DevState_Diagnosis()=FALSE THEN
		GVL_Diagnosis.bEtherCATOK:=FALSE;
	ELSIF fbDiagnosisEtherCAT.FrmState_Diagnosis(0)=FALSE THEN
		GVL_Diagnosis.bEtherCATOK:=FALSE;
	ELSIF fbDiagnosisEtherCAT.FrmState_Diagnosis(1)=FALSE THEN
		GVL_Diagnosis.bEtherCATOK:=FALSE;
	ELSIF fbDiagnosisEtherCAT.FrmState_Diagnosis(2)=FALSE THEN
		GVL_Diagnosis.bEtherCATOK:=FALSE;
	ELSIF fbDiagnosisEtherCAT.FrmWcState_Diagnosis(0)=FALSE THEN
		GVL_Diagnosis.bEtherCATOK:=FALSE;
	ELSIF fbDiagnosisEtherCAT.FrmWcState_Diagnosis(1)=FALSE THEN
		GVL_Diagnosis.bEtherCATOK:=FALSE;
	ELSIF fbDiagnosisEtherCAT.FrmWcState_Diagnosis(2)=FALSE THEN
		GVL_Diagnosis.bEtherCATOK:=FALSE;
	ELSIF fbDiagnosisEtherCAT.SlaveCount_Diagnosis()=FALSE THEN
		GVL_Diagnosis.bEtherCATOK:=FALSE;
	ELSE
		GVL_Diagnosis.bEtherCATOK:=TRUE;
	END_IF

						
//ターミナル診断
	//診断用変数リセット
	GVL_Diagnosis.bTerminalOK:=TRUE;

	FOR eTerminal:= E_Terminal.EK1100 TO E_Terminal.AZD4A_KED DO
		
		CASE eTerminal OF
			E_Terminal.EK1100,E_Terminal.AZD4A_KED:	//EK1100とAZD4A-KEDはステータスしかないので、ステータスのみチェック
				IF fbDiagnosisTerminal[eTerminal].State_Diagnosis()=FALSE THEN
					GVL_Diagnosis.bTerminalOK:=FALSE;
				END_IF			
			
			E_Terminal.EL1004..E_Terminal.EL3351:	//通常ターミナルはステータスとワーキングカウンターをチェック
				IF fbDiagnosisTerminal[eTerminal].State_Diagnosis()=FALSE THEN
					GVL_Diagnosis.bTerminalOK:=FALSE;
				ELSIF fbDiagnosisTerminal[eTerminal].WcState_Diagnosis(0)=FALSE THEN
					GVL_Diagnosis.bTerminalOK:=FALSE;
				END_IF
				
			E_Terminal.EL2911:	//EL2911はステータスとワーキングカウンター二個をチェック
				IF fbDiagnosisTerminal[eTerminal].State_Diagnosis()=FALSE THEN
					GVL_Diagnosis.bTerminalOK:=FALSE;
				ELSIF fbDiagnosisTerminal[eTerminal].WcState_Diagnosis(0)=FALSE THEN
					GVL_Diagnosis.bTerminalOK:=FALSE;
				ELSIF fbDiagnosisTerminal[eTerminal].WcState_Diagnosis(1)=FALSE THEN
					GVL_Diagnosis.bTerminalOK:=FALSE;
				END_IF
				
		END_CASE
	END_FOR]]></ST>
    </Implementation>
    <LineIds Name="P_Diagnosis">
      <LineId Id="175" Count="4" />
      <LineId Id="194" Count="1" />
      <LineId Id="197" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="180" Count="1" />
      <LineId Id="189" Count="0" />
      <LineId Id="186" Count="0" />
      <LineId Id="193" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="182" Count="3" />
      <LineId Id="172" Count="0" />
      <LineId Id="198" Count="0" />
      <LineId Id="73" Count="1" />
      <LineId Id="201" Count="0" />
      <LineId Id="200" Count="0" />
      <LineId Id="202" Count="2" />
      <LineId Id="207" Count="0" />
      <LineId Id="212" Count="0" />
      <LineId Id="218" Count="1" />
      <LineId Id="215" Count="0" />
      <LineId Id="217" Count="0" />
      <LineId Id="222" Count="0" />
      <LineId Id="230" Count="3" />
      <LineId Id="223" Count="0" />
      <LineId Id="229" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="237" Count="5" />
      <LineId Id="234" Count="0" />
      <LineId Id="247" Count="0" />
      <LineId Id="213" Count="0" />
      <LineId Id="105" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>